--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,19 +25,15 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Start
+        run: echo Start
       - name: Get SHA and branch
         id: vars
         shell: bash
         run: |
           echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
