--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,17 +27,16 @@ jobs:
       # Runs a single command using the runners shell
       - name: Start
         run: echo Start
-      - name: Get SHA and branch
+      - name: Get SHA
         id: vars
         shell: bash
         run: |
-          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
           # Artifact name
-          name: ${{ steps.vars.outputs.branch }}:${{ steps.vars.outputs.sha_short }}
+          name: adf-${{ steps.vars.outputs.sha_short }}
           path: adf/
           if-no-files-found: error
